--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -40,7 +40,7 @@ jobs:
       uses: docker/login-action@v3.3.0
       with:
         username: ${{ vars.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        password: ${{ secrets.DOCKER_PERSONAL_ACCESS_TOKEN }}
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v6.7.0
