--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -50,9 +50,15 @@ jobs:
         env:
           demo: ${{ matrix.test.file }}
           desc: ${{ matrix.test.desc }}
-        run: docker run -t $imageName ./runTest.sh
+        run: |
+          docker run \
+            -t $imageName \
+            --env demo \
+            --env desc \
+            ./runTest.sh
 
   build:
+    if: false
     runs-on: ubuntu-latest
     strategy:
       matrix:
