--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -41,7 +41,7 @@ jobs:
 
       - uses: actions/cache@v4
         with:
-          path: .
+          path: /var/lib/docker/
           key: ${{ matrix.test.type }}
         
       - name: Prepare
